getOne spec only without implementation
