# utils/swagger/3_simple/swagger.yml
@@ -13,6 +13,24 @@ paths:
         name: id
         in: path
         required: true
+    get:
+      tags:
+        - jobs
+      operationId: getOne
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/job"
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: "#/definitions/job"
+        default:
+          description: error
+          schema:
+            $ref: "#/definitions/error"
     put:
       tags:
         - jobs
